package simulacionexamen;

public interface IOfertaAcademica {
    double calcularPrecio();
    String mostrarOferta();
}
